end featuers page

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                             <a class="nav-link" href="about_us.html"> من نحن</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="#">المميزات والحلول</a>
+                            <a class="nav-link " href="features.html">المميزات والحلول</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#"> الباقات</a>
@@ -429,7 +429,7 @@
                                 <a class="nav-link" href="about_us.html"> من نحن</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link " href="#"> المميزات والحلول </a>
+                                <a class="nav-link " href="features.html"> المميزات والحلول </a>
                             </li>
 
                             <li class="nav-item">
@@ -1234,7 +1234,7 @@
                             <a class="nav-link " href="index.html">الرئيسية</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">المميزات والحلول</a>
+                            <a class="nav-link" href="features.html">المميزات والحلول</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">المدونة</a>
