--- a/features.html
+++ b/features.html
@@ -162,7 +162,7 @@
                             <a class="nav-link" href="#"> المدونة </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"> اتصل بنا</a>
+                            <a class="nav-link" href="contact.html"> اتصل بنا</a>
                         </li>
                         <li class="nav-item dropdown-cunt  ">
                             <div class="dropbtn   d-flex align-items-center">
@@ -440,7 +440,7 @@
                                 <a class="nav-link" href="#"> المدونة </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#"> اتصل بنا </a>
+                                <a class="nav-link" href="contact.html"> اتصل بنا </a>
                             </li>
 
                             <li class="nav-item dropdown-cunt  ">
@@ -1036,7 +1036,7 @@
                             <a class="nav-link" href="#">الوظائف</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"> تواصل معنا </a>
+                            <a class="nav-link" href="contact.html"> تواصل معنا </a>
                         </li>
                     </ul>
                 </div>
