--- a/features.html
+++ b/features.html
@@ -156,10 +156,10 @@
                             <a class="nav-link active " href="features.html">المميزات والحلول</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"> الباقات</a>
+                            <a class="nav-link" href="packages.html"> الباقات</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"> المدونة </a>
+                            <a class="nav-link" href="blog.html"> المدونة </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html"> اتصل بنا</a>
@@ -433,11 +433,11 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link " href="#"> الباقات </a>
+                                <a class="nav-link " href="packages.html"> الباقات </a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#"> المدونة </a>
+                                <a class="nav-link" href="blog.html"> المدونة </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contact.html"> اتصل بنا </a>
@@ -1008,10 +1008,10 @@
                             <a class="nav-link" href="features.html">المميزات والحلول</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">المدونة</a>
+                            <a class="nav-link" href="blog.html">المدونة</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">الباقات</a>
+                            <a class="nav-link" href="packages.html">الباقات</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#"> تسجيل الدخول </a>
