--- a/contact.html
+++ b/contact.html
@@ -157,10 +157,10 @@
                             <a class="nav-link  " href="features.html">المميزات والحلول</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"> الباقات</a>
+                            <a class="nav-link" href="packages.html"> الباقات</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"> المدونة </a>
+                            <a class="nav-link" href="blog.html"> المدونة </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active " href="contact.html"> اتصل بنا</a>
@@ -434,11 +434,11 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link " href="#"> الباقات </a>
+                                <a class="nav-link " href="packages.html"> الباقات </a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#"> المدونة </a>
+                                <a class="nav-link" href="blog.html"> المدونة </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" href="contact.html"> اتصل بنا </a>
@@ -882,10 +882,10 @@
                             <a class="nav-link" href="features.html">المميزات والحلول</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">المدونة</a>
+                            <a class="nav-link" href="blog.html">المدونة</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">الباقات</a>
+                            <a class="nav-link" href="packages.html">الباقات</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#"> تسجيل الدخول </a>
