--- a/blog.html
+++ b/blog.html
@@ -32,8 +32,8 @@
     <link rel="stylesheet" href="css/animate.css">
     <!-- add  main style sheet  -->
     <link rel="stylesheet" href="css/main-style.css">
-    <!-- link contact style file  -->
-    <link rel="stylesheet" href="css/contact-style.css">
+    <!-- link blog style file  -->
+    <link rel="stylesheet" href="css/blog-style.css ">
 
 
 </head>
@@ -157,13 +157,13 @@
                             <a class="nav-link  " href="features.html">المميزات والحلول</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="packages.html"> الباقات</a>
+                            <a class="nav-link " href="packages.html"> الباقات</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="blog.html"> المدونة </a>
+                            <a class="nav-link active" href="blog.html"> المدونة </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active " href="contact.html"> اتصل بنا</a>
+                            <a class="nav-link  " href="contact.html"> اتصل بنا</a>
                         </li>
                         <li class="nav-item dropdown-cunt  ">
                             <div class="dropbtn   d-flex align-items-center">
@@ -434,14 +434,14 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link " href="packages.html"> الباقات </a>
+                                <a class="nav-link  " href="packages.html"> الباقات </a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="blog.html"> المدونة </a>
+                                <a class="nav-link active" href="blog.html"> المدونة </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="contact.html"> اتصل بنا </a>
+                                <a class="nav-link " href="contact.html"> اتصل بنا </a>
                             </li>
 
                             <li class="nav-item dropdown-cunt  ">
@@ -611,156 +611,252 @@
             </div>
         </nav>
 
-        <!-- start land section -->
 
-        <div class="container land-section pt-5 ">
-            <div class="row align-items-center justify-content-center">
 
-                <div class="col-lg-10 text-center">
-                    <h1> تواصل معنا </h1>
+    </header>
+    <!-- start header and land section -->
+    <main>
+
+
+        <!-- start blog section -->
+
+        <section class=" blogs  my-5 wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.7s">
+            <div class="container ">
+                <div class="d-flex flex-sm-row flex-column justify-content-between align-items-center mb-3">
+                    <h4>أهم أخبار اليوم</h4>
+
+                </div>
+                <div class="row align-items-center ">
+                    <div class="col-lg-6 mb-3 rounded-img">
+                        <a href="#">
+                            <figure>
+                                <img src="images/img_7.png" class="img-fluid w-100" alt="">
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="  col-lg-6  d-flex flex-column gap-1 mb-3">
+                        <a href="#" class="blog-title">
+                            <h3 class=" mb-4 ">ما هي أضرار البروتينات على الرجال؟</h3>
+                        </a>
+                        <p class="lines3">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من
+                            مولد النص
+                            العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف
+                            التى يولدها التطبيق.</p>
+
+                    </div>
+
+                </div>
+
+                <div class="row align-items-center mt-4  small-blogs ">
+                    <div class="col-lg-4 col-md-6">
+                        <div class="row align-items-center ">
+                            <div class="  col-xxl-4 col-xl-5 col-lg-6 mb-3 rounded-img">
+                                <a href="#">
+                                    <figure>
+                                        <img src="images/img_8.png" class="img-fluid w-100 h-100" alt="">
+                                    </figure>
+                                </a>
+                            </div>
+                            <div class="  col-lg-6  d-flex flex-column gap-1 mb-3">
+                                <a href="#" class="blog-sub-title">
+                                    <h3>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة</h3>
+                                </a>
+
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="row align-items-center ">
+                            <div class="  col-xxl-4 col-xl-5 col-lg-6 mb-3 rounded-img">
+                                <a href="#">
+                                    <figure>
+                                        <img src="images/img_8 (1).png" class="img-fluid w-100 h-100" alt="">
+                                    </figure>
+                                </a>
+                            </div>
+                            <div class="  col-lg-6  d-flex flex-column gap-1 mb-3">
+                                <a href="#" class="blog-sub-title">
+                                    <h3>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة</h3>
+                                </a>
+
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6">
+                        <div class="row align-items-center ">
+                            <div class="  col-xxl-4 col-xl-5 col-lg-6 mb-3 rounded-img">
+                                <a href="#">
+                                    <figure>
+                                        <img src="images/img_8 (2).png" class="img-fluid w-100 h-100" alt="">
+                                    </figure>
+                                </a>
+                            </div>
+                            <div class="  col-lg-6  d-flex flex-column gap-1 mb-3">
+                                <a href="#" class="blog-sub-title">
+                                    <h3>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة</h3>
+                                </a>
+
+
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
+
+
+                </div>
+
+            </div>
+        </section>
+        <!-- end blog section -->
+
+        <!-- start blog-types section -->
+        <section class="blog-types my-5 wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.7s">
+            <div class="container ">
+                <div class="d-flex flex-sm-row flex-column justify-content-between align-items-center mb-3">
+                    <h4> العيش بصحة جيدة</h4>
+                    <a href="#" class=" d-flex align-items-center gap-2 show-all">عرض الكل <i
+                            class="bi bi-arrow-left mt-2"></i>
+                    </a>
+                </div>
+                <div class="row align-items-center justify-content-center ">
+                    <div class="col-lg-2 col-md-4 col-sm-6  mb-3  ">
+                        <a href="#" class="blog-type-img ">
+                            <div class="w-100 h-100">
+                                <img src="images/blogtype1.png" class="img-fluid" alt="">
+                                <div class="blog-type-title">صحة نفسية</div>
+                            </div>
+
+                        </a>
+                    </div>
+                    <div class="col-lg-2 col-md-4 col-sm-6  mb-3  ">
+                        <a href="#" class="blog-type-img ">
+                            <div class="w-100 h-100">
+                                <img src="images/blogtype2.png" class="img-fluid" alt="">
+                                <div class="blog-type-title"> حمية </div>
+                            </div>
+
+                        </a>
+                    </div>
+                    <div class="col-lg-2 col-md-4 col-sm-6  mb-3  ">
+                        <a href="#" class="blog-type-img ">
+                            <div class="w-100 h-100">
+                                <img src="images/blogtype4.png" class="img-fluid" alt="">
+                                <div class="blog-type-title"> تقدم سليم</div>
+                            </div>
+
+                        </a>
+                    </div>
+                    <div class="col-lg-2 col-md-4 col-sm-6  mb-3  ">
+                        <a href="#" class="blog-type-img ">
+                            <div class="w-100 h-100">
+                                <img src="images/blogtype3.png" class="img-fluid" alt="">
+                                <div class="blog-type-title"> صحة جنسية</div>
+                            </div>
+
+                        </a>
+                    </div>
+                    <div class="col-lg-2 col-md-4 col-sm-6  mb-3  ">
+                        <a href="#" class="blog-type-img ">
+                            <div class="w-100 h-100">
+                                <img src="images/blogtype4.png" class="img-fluid" alt="">
+                                <div class="blog-type-title"> تقدم سليم</div>
+                            </div>
+
+                        </a>
+                    </div>
+
+
 
                 </div>
 
 
 
             </div>
-        </div>
+        </section>
+        <!-- end blog-types section -->
 
-        <!-- end land section -->
+        <!-- start small-boxs section -->
 
-    </header>
-    <!-- start header and land section -->
-    <main>
-
-        <!-- start contect-form -->
-
-        <section class="contect-form  wow fadeInUp contect-form" data-wow-duration="2s" data-wow-delay="0.5s">
-
+        <section class="small-boxs my-5 wow fadeInUp py-5" data-wow-duration="2s" data-wow-delay="0.7s">
             <div class="container">
-
-                <div class="row justify-content-around">
-
-                    <div class="col-lg-5  mb-5">
-                        <h4 class=" mb-5">راسلنا </h4>
-                        <form>
-                            <div class="row ">
-                                <div class="col-lg-6">
-                                    <div class="mb-3">
-                                        <label for="exampleEmail1" class="form-label">الاسم الاول </label>
-                                        <input type="text" class="form-control" id="exampleEmail1"
-                                            placeholder="الاسم الاول.." aria-describedby="emailHelp">
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="mb-3">
-                                        <label for="exampleInputEmail2" class="form-label"> الاسم الثاني </label>
-                                        <input type="text" class="form-control" id="exampleInputEmail2"
-                                            placeholder="الاسم الثاني.." aria-describedby="emailHelp">
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="mb-3">
-                                        <label for="exampleInputEmail4" class="form-label"> البريد الالكتروني </label>
-                                        <input type="email" class="form-control" id="exampleInputEmail4"
-                                            placeholder="البريد الالكترون.." aria-describedby="emailHelp">
-
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="mb-3">
-                                        <label for="exampleInputEmail3" class="form-label">رقم الهاتف</label>
-                                        <input type="text" class="form-control" placeholder="رقم الهاتف.."
-                                            id="exampleInputEmail3" aria-describedby="emailHelp">
-                                    </div>
-                                </div>
-
-
-
-                                <div class="col-12">
-                                    <div class="mb-3 mt-4">
-                                        <label for="exampleInputEmail4" class="form-label">الرسالة </label>
-                                        <textarea type="text" rows="8" class="form-control"
-                                            placeholder="ادخل نص الرسالة.." id="exampleInputEmail4"
-                                            aria-describedby="emailHelp"></textarea>
-
-                                    </div>
-                                </div>
-                                <div class="col-12">
-
-
-                                    <button type="submit  " class="btn btn-login mt-3 py-3 w-100">ارسال</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-
-                    <div class="col-xl-4 col-lg-6   mb-5  mad   text-start d-flex flex-column  ">
-                        <h4 class=" mb-5"> تفاصيلنا </h4>
-
-
-
-                        <a href="#">
-                            <div
-                                class="mb-2 info-sec py-3 ps-lg-4 d-flex flex-column  text-center text-lg-start  justify-content-center">
-
-                                <i class="bi bi-envelope  fs-3"></i>
-
-                                <h6 class="mb-2"> البريد الالكتروني</h6>
-                                <p class="ans">Contact@centroware.com</p>
-                            </div>
-                        </a>
-                        <a href="#">
-                            <div
-                                class="mb-2 info-sec py-3 ps-lg-4 d-flex flex-column  text-center text-lg-start  justify-content-center">
-                                <i class="bi bi-telephone  fs-3"></i>
-                                <h6 class="mb-2"> رقم الهاتف</h6>
-                                <p class="ans">+970 599 123456</p>
-                            </div>
-                        </a>
-
-                        <a href="#">
-                            <div
-                                class="mb-2 info-sec py-3 ps-lg-4 d-flex flex-column  text-center text-lg-start  justify-content-center">
-                                <i class="bi bi-clock  fs-3"></i>
-                                <h6 class="mb-2"> ساعات العمل</h6>
-                                <p dir="ltr" class="ans">Sunday to Thursday <br>8:00 am - 5:00 pm</p>
-
-                            </div>
-                        </a>
-
-                        <div
-                            class="d-flex socil-icon flex-wrap justify-content-center justify-content-lg-start  gap-3 mt-3  ">
-                            <a href="#">
-                                <i class="bi bi-instagram"></i>
-                            </a>
-                            <a href="#">
-                                <i class="bi bi-telegram"></i>
-                            </a>
-                            <a href="#">
-                                <i class="bi bi-tiktok"></i>
-                            </a>
-                            <a href="#">
-                                <i class="bi bi-facebook"></i>
-                            </a>
-
-                        </div>
-
-
-
-
-
-
-
-                    </div>
+                <div class="d-flex justify-content-center text-center ">
+                    <h2>العيش بصحة جيدة</h2>
                 </div>
+                <div class="row justify-content-center mt-5 ">
+                    <div class="col-lg-3 col-md-6 mb-5">
+                        <a href="#" class="small-box py-3 ">
+                            هذا النص هو مثال لنص
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-md-6 mb-5">
+                        <a href="#" class="small-box py-3 ">
+                            هذا النص هو مثال لنص
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-md-6 mb-5">
+                        <a href="#" class="small-box py-3 ">
+                            هذا النص هو مثال لنص
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-md-6 mb-5">
+                        <a href="#" class="small-box py-3 ">
+                            هذا النص هو مثال لنص
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-md-6 mb-5">
+                        <a href="#" class="small-box py-3 ">
+                            هذا النص هو مثال لنص
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-md-6 mb-5">
+                        <a href="#" class="small-box py-3 ">
+                            هذا النص هو مثال لنص
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-md-6 mb-5">
+                        <a href="#" class="small-box py-3 ">
+                            هذا النص هو مثال لنص
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-md-6 mb-5">
+                        <a href="#" class="small-box py-3 ">
+                            هذا النص هو مثال لنص
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-md-6 mb-5">
+                        <a href="#" class="small-box py-3 ">
+                            هذا النص هو مثال لنص
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-md-6 mb-5">
+                        <a href="#" class="small-box py-3 ">
+                            هذا النص هو مثال لنص
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-md-6 mb-5">
+                        <a href="#" class="small-box py-3 ">
+                            هذا النص هو مثال لنص
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-md-6 mb-5">
+                        <a href="#" class="small-box py-3 ">
+                            هذا النص هو مثال لنص
+                        </a>
+                    </div>
 
 
 
+                </div>
+            </div>
         </section>
 
-        <!-- end contect-form -->
-
-
+        <!-- start small-boxs section -->
 
     </main>
 
