--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                         </a>
                     </h5>
                     <div class="offcanvas-body sidebar">
-                        <ul class="navbar-nav align-items-center  flex-column justify-content-center gap-4">
+                        <ul class="navbar-nav align-items-center  flex-column justify-content-center ">
 
 
                             <li class="nav-item">
