--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                             <a class="nav-link" href="packages.html"> الباقات</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="blogs.html"> المدونة </a>
+                            <a class="nav-link" href="blog.html"> المدونة </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html"> اتصل بنا</a>
@@ -419,7 +419,7 @@
                         </a>
                     </h5>
                     <div class="offcanvas-body sidebar">
-                        <ul class="navbar-nav align-items-center  flex-column justify-content-center ">
+                        <ul class="navbar-nav align-items-center  flex-column justify-content-center gap-4">
 
 
                             <li class="nav-item">
