--- a/blog.html
+++ b/blog.html
@@ -858,6 +858,339 @@
 
         <!-- start small-boxs section -->
 
+
+
+        <!-- start our-team section -->
+
+        <section class="our-team wow fadeInUp my-5 " data-wow-duration="2s" data-wow-delay="0.7s">
+            <div class="swiper mySwiper container   mt-5">
+                <div class="d-flex flex-column justify-content-center text-center align-items-center">
+                    <h4>فريقنا المحترف</h4>
+                    <h5>اجتمع مع أفضل الأطباء</h5>
+                </div>
+                <div class="swiper-wrapper d-flex justify-content-center mt-5 ">
+                    <div class="swiper-slide  mx-3 me-0">
+                        <div class="clint-card p-4 py-4 ">
+                            <div class="d-flex align-items-center gap-5">
+                                <div class="d-flex flex-column justify-content-center align-items-center gap-2">
+                                    <div class="clint-img">
+                                        <img src="images/clint.png" class="img-fluid w-100 h-100" alt="">
+                                    </div>
+                                    <a href="#" class="profile-link">الملف الشخصـي</a>
+                                </div>
+                                <div class="d-flex flex-column  align-items-center gap-1 ">
+                                    <h6>د. محمد علي</h6>
+                                    <p>عيادة الاردن الخاصة</p>
+                                    <div class="d-flex justify-content-center align-items-center gap-2">
+                                        <i class="bi bi-star-fill fs-6 start-active"></i>
+                                        <i class="bi bi-star-fill fs-6 start-active"></i>
+                                        <i class="bi bi-star-fill fs-6 start-active"></i>
+                                        <i class="bi bi-star-fill fs-6 "></i>
+                                        <i class="bi bi-star-fill fs-6 "></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="gray-line"></div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">متخصص في :</p>
+                                <p class="title-info">جراحة</p>
+                            </div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">مدة الانتظار :</p>
+                                <p class="title-info">25 دقيقة</p>
+                            </div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">الكشفية :</p>
+                                <p class="title-info">50 دينار</p>
+                            </div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">عدد المشاهدات :</p>
+                                <p class="title-info">2450 </p>
+                            </div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">العنوان :</p>
+                                <p class="title-info">الاردن - عمان </p>
+                            </div>
+
+                            <a href="#" class="btn btn-reserve mt-4 py-2">حجز الان</a>
+
+
+
+
+                        </div>
+                    </div>
+                    <div class="swiper-slide mx-3  me-0 ">
+                        <div class="clint-card p-4 py-4 ">
+                            <div class="d-flex align-items-center gap-5">
+                                <div class="d-flex flex-column justify-content-center align-items-center gap-2">
+                                    <div class="clint-img">
+                                        <img src="images/clint.png" class="img-fluid w-100 h-100" alt="">
+                                    </div>
+                                    <a href="#" class="profile-link">الملف الشخصـي</a>
+                                </div>
+                                <div class="d-flex flex-column  align-items-center gap-1 ">
+                                    <h6>د. محمد علي</h6>
+                                    <p>عيادة الاردن الخاصة</p>
+                                    <div class="d-flex justify-content-center align-items-center gap-2">
+                                        <i class="bi bi-star-fill fs-6 start-active"></i>
+                                        <i class="bi bi-star-fill fs-6 start-active"></i>
+                                        <i class="bi bi-star-fill fs-6 start-active"></i>
+                                        <i class="bi bi-star-fill fs-6 "></i>
+                                        <i class="bi bi-star-fill fs-6 "></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="gray-line"></div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">متخصص في :</p>
+                                <p class="title-info">جراحة</p>
+                            </div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">مدة الانتظار :</p>
+                                <p class="title-info">25 دقيقة</p>
+                            </div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">الكشفية :</p>
+                                <p class="title-info">50 دينار</p>
+                            </div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">عدد المشاهدات :</p>
+                                <p class="title-info">2450 </p>
+                            </div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">العنوان :</p>
+                                <p class="title-info">الاردن - عمان </p>
+                            </div>
+
+                            <a href="#" class="btn btn-reserve mt-4 py-2">حجز الان</a>
+
+
+
+
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide  mx-3  me-0">
+                        <div class="clint-card p-4 py-4 ">
+                            <div class="d-flex align-items-center gap-5">
+                                <div class="d-flex flex-column justify-content-center align-items-center gap-2">
+                                    <div class="clint-img">
+                                        <img src="images/clint.png" class="img-fluid w-100 h-100" alt="">
+                                    </div>
+                                    <a href="#" class="profile-link">الملف الشخصـي</a>
+                                </div>
+                                <div class="d-flex flex-column  align-items-center gap-1 ">
+                                    <h6>د. محمد علي</h6>
+                                    <p>عيادة الاردن الخاصة</p>
+                                    <div class="d-flex justify-content-center align-items-center gap-2">
+                                        <i class="bi bi-star-fill fs-6 start-active"></i>
+                                        <i class="bi bi-star-fill fs-6 start-active"></i>
+                                        <i class="bi bi-star-fill fs-6 start-active"></i>
+                                        <i class="bi bi-star-fill fs-6 "></i>
+                                        <i class="bi bi-star-fill fs-6 "></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="gray-line"></div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">متخصص في :</p>
+                                <p class="title-info">جراحة</p>
+                            </div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">مدة الانتظار :</p>
+                                <p class="title-info">25 دقيقة</p>
+                            </div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">الكشفية :</p>
+                                <p class="title-info">50 دينار</p>
+                            </div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">عدد المشاهدات :</p>
+                                <p class="title-info">2450 </p>
+                            </div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">العنوان :</p>
+                                <p class="title-info">الاردن - عمان </p>
+                            </div>
+
+                            <a href="#" class="btn btn-reserve mt-4 py-2">حجز الان</a>
+
+
+
+
+                        </div>
+                    </div>
+                    <div class="swiper-slide  mx-3 me-0">
+                        <div class="clint-card p-4 py-4 ">
+                            <div class="d-flex align-items-center gap-5">
+                                <div class="d-flex flex-column justify-content-center align-items-center gap-2">
+                                    <div class="clint-img">
+                                        <img src="images/clint.png" class="img-fluid w-100 h-100" alt="">
+                                    </div>
+                                    <a href="#" class="profile-link">الملف الشخصـي</a>
+                                </div>
+                                <div class="d-flex flex-column  align-items-center gap-1 ">
+                                    <h6>د. محمد علي</h6>
+                                    <p>عيادة الاردن الخاصة</p>
+                                    <div class="d-flex justify-content-center align-items-center gap-2">
+                                        <i class="bi bi-star-fill fs-6 start-active"></i>
+                                        <i class="bi bi-star-fill fs-6 start-active"></i>
+                                        <i class="bi bi-star-fill fs-6 start-active"></i>
+                                        <i class="bi bi-star-fill fs-6 "></i>
+                                        <i class="bi bi-star-fill fs-6 "></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="gray-line"></div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">متخصص في :</p>
+                                <p class="title-info">جراحة</p>
+                            </div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">مدة الانتظار :</p>
+                                <p class="title-info">25 دقيقة</p>
+                            </div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">الكشفية :</p>
+                                <p class="title-info">50 دينار</p>
+                            </div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">عدد المشاهدات :</p>
+                                <p class="title-info">2450 </p>
+                            </div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">العنوان :</p>
+                                <p class="title-info">الاردن - عمان </p>
+                            </div>
+
+                            <a href="#" class="btn btn-reserve mt-4 py-2">حجز الان</a>
+
+
+
+
+                        </div>
+                    </div>
+                    <div class="swiper-slide mx-3  me-0 ">
+                        <div class="clint-card p-4 py-4 ">
+                            <div class="d-flex align-items-center gap-5">
+                                <div class="d-flex flex-column justify-content-center align-items-center gap-2">
+                                    <div class="clint-img">
+                                        <img src="images/clint.png" class="img-fluid w-100 h-100" alt="">
+                                    </div>
+                                    <a href="#" class="profile-link">الملف الشخصـي</a>
+                                </div>
+                                <div class="d-flex flex-column  align-items-center gap-1 ">
+                                    <h6>د. محمد علي</h6>
+                                    <p>عيادة الاردن الخاصة</p>
+                                    <div class="d-flex justify-content-center align-items-center gap-2">
+                                        <i class="bi bi-star-fill fs-6 start-active"></i>
+                                        <i class="bi bi-star-fill fs-6 start-active"></i>
+                                        <i class="bi bi-star-fill fs-6 start-active"></i>
+                                        <i class="bi bi-star-fill fs-6 "></i>
+                                        <i class="bi bi-star-fill fs-6 "></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="gray-line"></div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">متخصص في :</p>
+                                <p class="title-info">جراحة</p>
+                            </div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">مدة الانتظار :</p>
+                                <p class="title-info">25 دقيقة</p>
+                            </div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">الكشفية :</p>
+                                <p class="title-info">50 دينار</p>
+                            </div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">عدد المشاهدات :</p>
+                                <p class="title-info">2450 </p>
+                            </div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">العنوان :</p>
+                                <p class="title-info">الاردن - عمان </p>
+                            </div>
+
+                            <a href="#" class="btn btn-reserve mt-4 py-2">حجز الان</a>
+
+
+
+
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide  mx-3  me-0">
+                        <div class="clint-card p-4 py-4 ">
+                            <div class="d-flex align-items-center gap-5">
+                                <div class="d-flex flex-column justify-content-center align-items-center gap-2">
+                                    <div class="clint-img">
+                                        <img src="images/clint.png" class="img-fluid w-100 h-100" alt="">
+                                    </div>
+                                    <a href="#" class="profile-link">الملف الشخصـي</a>
+                                </div>
+                                <div class="d-flex flex-column  align-items-center gap-1 ">
+                                    <h6>د. محمد علي</h6>
+                                    <p>عيادة الاردن الخاصة</p>
+                                    <div class="d-flex justify-content-center align-items-center gap-2">
+                                        <i class="bi bi-star-fill fs-6 start-active"></i>
+                                        <i class="bi bi-star-fill fs-6 start-active"></i>
+                                        <i class="bi bi-star-fill fs-6 start-active"></i>
+                                        <i class="bi bi-star-fill fs-6 "></i>
+                                        <i class="bi bi-star-fill fs-6 "></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="gray-line"></div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">متخصص في :</p>
+                                <p class="title-info">جراحة</p>
+                            </div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">مدة الانتظار :</p>
+                                <p class="title-info">25 دقيقة</p>
+                            </div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">الكشفية :</p>
+                                <p class="title-info">50 دينار</p>
+                            </div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">عدد المشاهدات :</p>
+                                <p class="title-info">2450 </p>
+                            </div>
+                            <div class="d-flex align-items-center gap-5 mb-2">
+                                <p class="title">العنوان :</p>
+                                <p class="title-info">الاردن - عمان </p>
+                            </div>
+
+                            <a href="#" class="btn btn-reserve mt-4 py-2">حجز الان</a>
+
+
+
+
+                        </div>
+                    </div>
+
+
+
+
+
+
+                </div>
+
+
+            </div>
+            <div class="d-flex justify-content-center gap-3 my-5">
+                <span class="slidicon s1" aria-hidden="true"> <i class=" bi bi-arrow-right "></i></span>
+                <span class="slidicon s2" aria-hidden="true"> <i class=" bi bi-arrow-left "></i></span>
+            </div>
+
+
+        </section>
+
+        <!-- end our-team section  -->
+
     </main>
 
 
