--- a/blog.html
+++ b/blog.html
@@ -857,6 +857,132 @@
 
 
 
+        <!-- start cards section  -->
+        <section class="cards wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.7s">
+            <div class="container ">
+                <div class="row align-items-center">
+                    <div class="col-md-3 mb-3">
+                        <h4> أخبار صحية</h4>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <form action="#" class=" search d-flex justify-content-center">
+                            <div class="input-group ">
+                                <input type="email" class="form-control" placeholder="البحث "
+                                    aria-label="Recipient's username" aria-describedby="button-addon2">
+                                <button class="btn btn-search px-5 " type="button" id="button-addon2">بحث</button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="col-lg-3 mb-3 ">
+                        <a href="#"
+                            class=" d-flex align-items-center justify-content-lg-end justify-content-center gap-2 show-all">عرض
+                            الكل <i class="bi bi-arrow-left mt-2"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="row align-items-center justify-content-center mt-5 ">
+                    <div class="col-lg-4 col-md-6 mb-3">
+                        <div class="card">
+                            <a href="#" class="card-img">
+                                <img src="images/card1.png" class="card-img-top img-fluid" alt="...">
+                            </a>
+                            <div class="card-body  ps-3 py-4">
+                                <h6>22 أكتوبر 2022</h6>
+                                <a href="#" class="card-title">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة </a>
+                                <p class="card-text lines2">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم
+                                    توليد
+                                    هذا النص من مولد النص العربى، .
+                                    هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم
+                                    توليد
+                                    هذا النص من مولد النص العربى، .</p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mb-3">
+                        <div class="card">
+                            <a href="#" class="card-img">
+                                <img src="images/card2.png" class="card-img-top img-fluid" alt="...">
+                            </a>
+                            <div class="card-body  ps-3 py-4">
+                                <h6>22 أكتوبر 2022</h6>
+                                <a href="#" class="card-title">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة </a>
+                                <p class="card-text lines2">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم
+                                    توليد
+                                    هذا النص من مولد النص العربى، .</p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mb-3">
+                        <div class="card">
+                            <a href="#" class="card-img">
+                                <img src="images/card3.png" class="card-img-top img-fluid" alt="...">
+                            </a>
+                            <div class="card-body  ps-3 py-4">
+                                <h6>22 أكتوبر 2022</h6>
+                                <a href="#" class="card-title">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة </a>
+                                <p class="card-text lines2">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم
+                                    توليد
+                                    هذا النص من مولد النص العربى، .</p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mb-3">
+                        <div class="card">
+                            <a href="#" class="card-img">
+                                <img src="images/card1.png" class="card-img-top img-fluid" alt="...">
+                            </a>
+                            <div class="card-body  ps-3 py-4">
+                                <h6>22 أكتوبر 2022</h6>
+                                <a href="#" class="card-title">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة </a>
+                                <p class="card-text lines2">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم
+                                    توليد
+                                    هذا النص من مولد النص العربى، .</p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mb-3">
+                        <div class="card">
+                            <a href="#" class="card-img">
+                                <img src="images/card2.png" class="card-img-top img-fluid" alt="...">
+                            </a>
+                            <div class="card-body  ps-3 py-4">
+                                <h6>22 أكتوبر 2022</h6>
+                                <a href="#" class="card-title">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة </a>
+                                <p class="card-text lines2">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم
+                                    توليد
+                                    هذا النص من مولد النص العربى، .</p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mb-3">
+                        <div class="card">
+                            <a href="#" class="card-img">
+                                <img src="images/card3.png" class="card-img-top img-fluid" alt="...">
+                            </a>
+                            <div class="card-body  ps-3 py-4">
+                                <h6>22 أكتوبر 2022</h6>
+                                <a href="#" class="card-title">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة </a>
+                                <p class="card-text lines2">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم
+                                    توليد
+                                    هذا النص من مولد النص العربى، .</p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+
+        <!-- end cards section  -->
+
         <!-- start our-team section -->
 
         <section class="our-team wow fadeInUp my-5 " data-wow-duration="2s" data-wow-delay="0.7s">
