end blog deitels

--- a/blog.html
+++ b/blog.html
@@ -625,14 +625,14 @@
                 </div>
                 <div class="row align-items-center ">
                     <div class="col-lg-6 mb-3 rounded-img">
-                        <a href="#">
+                        <a href="blog detitles.html">
                             <figure>
                                 <img src="images/img_7.png" class="img-fluid w-100" alt="">
                             </figure>
                         </a>
                     </div>
                     <div class="  col-lg-6  d-flex flex-column gap-1 mb-3">
-                        <a href="#" class="blog-title">
+                        <a href="blog detitles.html" class="blog-title">
                             <h3 class=" mb-4 ">ما هي أضرار البروتينات على الرجال؟</h3>
                         </a>
                         <p class="lines3">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من
@@ -867,7 +867,7 @@
                     <div class="col-md-6 mb-3">
                         <form action="#" class=" search d-flex justify-content-center">
                             <div class="input-group ">
-                                <input type="email" class="form-control" placeholder="البحث "
+                                <input type="text" class="form-control" placeholder="البحث "
                                     aria-label="Recipient's username" aria-describedby="button-addon2">
                                 <button class="btn btn-search px-5 " type="button" id="button-addon2">بحث</button>
                             </div>
@@ -979,8 +979,6 @@
 
             </div>
         </section>
-
-
         <!-- end cards section  -->
 
         <!-- start our-team section -->
