end contant edits

--- a/about_us.html
+++ b/about_us.html
@@ -652,79 +652,41 @@
                             </div>
                         </a>
                         <h2>حول ميسّر مقدمي الخدمات وما يميزنا </h2>
-                        <p> مرحبًا بك في مؤسسة فراج للخدمات الالكترونية الشركة الرائدة في مجال الخدمات الطبية
-                            الإلكترونية. نحن نتمتع بإدارة متميزة تتواجد في ولاية كاليفورنيا، الولايات المتحدة الأمريكية،
-                            مع مقر رئيسي موجود في الأردن. نسعى جاهدين لتيسير الخدمات الطبية لأهلنا في الشرق الاوسط وشمال
-                            افريقيا، ولذلك اخترنا أن نستقطب أفضل الكفاءات العربية لقيادة هذه المنصة المتطورة.
+                        <p> تأسست منصة "ميسِّر" للخدمات الطبية عام 2022، وهي أول منصة تستهدف الترويج للطبيب وعرض خدماته
+                            الطبية، بالإضافة إلى تزويده بنظام متكامل لإدارة عيادته وتنظيم مهامه، ما يساعده على النمو
+                            سريعًا في فترة وجيزة.
+
                         </p>
 
                         <p>
-                            تأسست المنصة في عام ٢٠٢٠ وتتميز برؤية مستقبلية استثنائية في مجال الرعاية الطبية، مستفيدين من
-                            التطورات الهائلة التي يتمتع بها القطاع الطبي في الولايات المتحدة الأمريكية.
+                            نحن ندرك أهمية الترويج الإلكتروني لخبرتك الطبية وخدماتك المتنوعة في هذا العصر، لذا أنشأنا
+                            منصة أخرى تستهدف المرضى وتزوّدهم بمعلومات عنك وعن عيادتك، وتستطيع من خلالها أيضًا استقبال
+                            استشارات طبية عن بعد، حتى نساعدك على الانتشار السريع لاسمك وعيادتك.
+
+
                         </p>
 
                         <p>
-                            في منصة مُيسر للخدمات الطبية يلتقي الابتكار مع التميز في الرعاية الصحية. نحن متحمسون لتسخير
-                            قوة التكنولوجيا لتحويل مشهد إدارة الرعاية الصحية. في مُيسر للخدمات الطبية، نحن ملتزمون
-                            بتشكيل مستقبل الرعاية الصحية من خلال الاستفادة من التكنولوجيا لتيسير رعاية المرضى، وتعزيز
-                            التواصل بين مقدمي الرعاية الصحية والمرضى، والاعتماد على السجلات الصحية الإلكترونية (EHR).
-                        </p>
-                        <p>
-                            في منصة مُيسر للخدمات الطبية، نتفهم التحديات المعقدة التي يواجهها متخصصو الرعاية الصحية
-                            ومؤسساتها في التعامل مع تعقيدات الرعاية الصحية الحديثة. ولهذا السبب كرسنا أنفسنا لتطوير
-                            الحلول الرقمية المتطورة التي تيسر لمقدمي الرعاية الصحية من استخدام الرعاية الصحية الحديثة
-                            مما ينعكس على تحسين جودة رعاية المرضى وتوفير الوقت والجهد والمال على مقدمي الرعاية الطبية.
-                        </p>
+                            ليس هذا فحسب، إذ نتفهم أهمية الوقت بالنسبة لك، لذا يسّرنا عليك أمر إدارة مهامك وزوّدناك
+                            بأحدث الأنظمة لإدارة العيادات، تساعدك في تنظيم جدول حجوزاتك، وإصدار فواتيرك المالية، وتزويدك
+                            بسجل طبي إلكتروني "EHR" لمرضاك، وأيضًا تقارير مفصّلة عن أداء عيادتك، وإحالة لوصفاتك الطبية
+                            إلى الجهات التي تثق بها.
 
-                        <p>
-                            مهمتنا هي إحداث ثورة في إدارة الرعاية الصحية من خلال أدوات رقمية قوية، مرنه وبسيطة. نحن نقدم
-                            مجموعة شاملة من الحلول المصممة لتلبية الاحتياجات المتنوعة لمؤسسات الرعاية الصحية، بدءًا من
-                            العيادات الصغيرة وحتى شبكات المستشفيات الكبيرة. تم تصميم منصتنا لتبسيط المهام الإدارية،
-                            وتحسين كفاءة سير العمل، وتسهيل التواصل السلس بين فرق الرعاية الصحية.
-                        </p>
-
-                        <p>
-                            نحن نعطي الأولوية للابتكار، ونعمل باستمرار على تطوير منصتنا لدمج أحدث التطورات التكنولوجية.
-                            من أنظمة السجلات الصحية الإلكترونية (EHR) إلى أدوات الإدارة العملية، تم تصميم حلولنا بدقة
-                            للتكيف مع مشهد الرعاية الصحية المتغير باستمرار.
-                        </p>
-
-                        <p>
-                            جوهرنا هو الالتزام بالرعاية التي تركز على اعطاء المريض رعاية استثنائية. نحن نؤمن بأن إدارة
-                            الرعاية الصحية الفعالة تترجم بشكل مباشر إلى تجارب أفضل للمرضى. من خلال تزويد مقدمي الرعاية
-                            الصحية بالأدوات التي يحتاجونها لتقديم هذه الرعاية الاستثنائية.
-                        </p>
-                        <p>
-                            تعد الخصوصية والأمان أمرًا بالغ الأهمية في مجال الرعاية الصحية، ونحن نأخذ هذه الجوانب على
-                            محمل الجد. تلتزم منصتنا بأعلى معايير أمن البيانات، مما يضمن سرية وسلامة معلومات المريض في كل
-                            خطوة.
-                        </p>
-
-                        <p>
-                            تبرز منصة مُيسر للخدمات الطبية من خلال التزامها بالابتكار وأمن البيانات والتركيز على المريض.
-                            نحن نعطي الأولوية لسرية وسلامة معلومات كل مريض، وننفذ إجراءات أمنية صارمة لحماية البيانات
-                            الحساسة.
-                        </p>
-                        <p>يضم فريقنا خبراء متحمسين في مجال الرعاية الصحية والتكنولوجيا وتجربة المستخدمين. نعمل معًا على
-                            تحسين منصتنا باستمرار، ودمج أحدث التطورات في مجال الصحة الرقمية لتلبية الاحتياجات المتطورة
-                            لمقدمي الرعاية الصحية والمرضى على حدٍ سواء.
 
                         </p>
                         <p>
-                            سواء كنت متخصصًا في الرعاية الصحية وتسعى إلى إدارة السجلات الصحية الإلكترونية بكفاءة أو
-                            مريضًا يبحث عن خدمات رعاية صحية مريحة وموثوقة والاعتماد على السجلات الصحية الإلكترونية، فإن
-                            مُيسر للخدمات الطبية هو شريكك الموثوق به في التنقل في مشهد الرعاية الصحية الرقمية.
-                        </p>
-                        <p>
-                            كما ان منصة مُيسر للخدمات الطبية هي أكثر من مجرد منصة؛ إنها شريكة في رحلتك نحو تحسين تقديم
-                            الرعاية الصحية. 
-                        </p>
-                        <p>
-                            انضم إلينا في إحداث ثورة في إدارة الرعاية الصحية. استكشف منصة مُيسر للخدمات الطبية واكتشف
-                            كيف يمكن لحلولنا الرقمية تمكين مؤسستك من الازدهار في عالم الرعاية الصحية سريع التطور.
+                            منصة "ميسر" مخصصة بالكامل لخدمة متطلبات القطاع الطبي في الأردن، بنظام متطوّر مبنيّ على أحدث
+                            التقنيات الأمريكية، بفضل وجود مركزنا الرئيسي في "كاليفورنيا، الولايات المتحدة".
+
                         </p>
 
-                        <p>مُيسر للخدمات الطبية</p>
+                        <p>
+                            ولقد حرص فريق عمل منصة "ميسر" على تزويدك بكل هذه المميزات من خلال واجهة سهلة الاستخدام،
+                            وداعمة للغة العربية، ولا تحتاج إلى أي خبرة مسبقة في نظم الإدارة أو أمور المحاسبة.
+
+
+                        </p>
+
 
                     </div>
                 </div>
@@ -736,12 +698,11 @@
 
         <!-- start  with-muser -->
         <section class="with-muser p-5 my-5 wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.7s">
-            <div class="container py-5">
+            <div class="container">
                 <div class="row justify-content-center align-items-center text-center">
                     <div class="col-lg-8 d-flex flex-column justify-content-center align-items-center gap-1 mx-auto">
-                        <h3>هل أنت مقدم خدمات؟ </h3>
-                        <p> قم بإدارة خدماتك الطبية بسهولة وتواصل مع المرضى بسهولة.</p>
-                        <a href="#" class="btn btn-trynow ">انضم إلى ميسر الآن</a>
+                        <h3>هذا هو الوقت المثالي لانطلاقك مع ميسر، هل أنت مستعد؟ </h3>
+                        <a href="packages.html" class="btn btn-trynow "> اعرف أكثر عن باقاتنا المميزة</a>
                     </div>
                 </div>
                 <div class="plus1">
@@ -776,12 +737,13 @@
                     </div>
                     <div class="col-xl-6 col-lg-7   ms-xl-3  d-flex flex-column gap-1 mb-3 wow fadeInLeft"
                         data-wow-duration="2s" data-wow-delay="0.5s">
-                        <span>رؤيتنا ورسالتنا</span>
-                        <p>المنصة توفر إدارة شاملة للفواتير وحجز المواعيد. وتدعم أيضًا الفواتير الإلكترونية وتقدم واجهة
-                            للإستشارات الطبية عن بعد والاستشارات داخل العيادة، وإدارة شاملة للتأمين الصحي. تسمح المنصة
-                            أيضًا بالتكامل مع الصيدليات والمعامل ومراكز الأشعة لإحالة المرضى مباشرة. بالإضافة إلى ذلك،
-                            تقدم إدارة كاملة للمختبرات والأشعة وبرنامجًا ماليًا شاملًا.
+                        <h2>لماذا تعد منصة "ميسِّر" للخدمات الطبية شريكاً مثالياً للطبيب؟</h2>
+                        <p>تقدم لك منصة ميسِّر العديد من الخدمات الحصرية مقابل أسعار تنافسية، وفي بيئة مؤمّنة تحمي
+                            خصوصيتك بفضل خوادمنا المشفرة، كذلك توفّر لك دعماً فنياً مجانيّاً طوال الأسبوع، وتحفظ لك
+                            حقوقك وفق عقد مسجل.
+
                         </p>
+                        <a href="contact.html" class="join-us-btn btn mt-2"> اتصل بنا </a>
                     </div>
 
                 </div>
