--- a/packages.html
+++ b/packages.html
@@ -638,8 +638,7 @@
 
             <div class="text-center container">
                 <div class="head-style  mb-5">
-                    <h3> اختر الخطة المناسبة لك </h3>
-                    <h4>أسعار مناسبة لخدماتك</h4>
+                    <h3>ابدأ الآن باختيار باقة ميسر المناسبة لك </h3>
                 </div>
 
                 <ul class="nav nav-pills my-5 d-flex justify-content-center  " id="pills-tab" role="tablist">
