--- a/services.html
+++ b/services.html
@@ -634,7 +634,11 @@
         <!-- start services -->
         <section class="  services mt-5 wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.7s">
             <div class="container py-5">
-                <div class="row justify-content-center align-items-center mt-5 ">
+
+                <div class="d-flex justify-content-center align-items-center text-center top-title ">
+                    <h2>نقدم لك باقة من الخدمات المميزة مقابل أسعار تنافسية حقاً </h2>
+                </div>
+                <div class="row justify-content-center align-items-center  ">
 
                     <div class="flip-card col-lg-4  col-md-6 mb-3 wow fadeInUp " data-wow-duration="2s"
                         data-wow-delay="1s">
@@ -1359,6 +1363,40 @@
 
         <!-- end services -->
 
+        <!-- start  with-muser -->
+        <section class="with-muser p-5 my-5 wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.7s">
+            <div class="container py-5">
+                <div class="row justify-content-center align-items-center text-center">
+                    <div class="col-lg-8 d-flex flex-column justify-content-center align-items-center gap-1 mx-auto">
+                        <h3>مع مُيسِّر عيادتك ميسرة
+                        </h3>
+                        <p> الأمر يسير ولن يتطلب سوى اتصال بالإنترنت، لا حاجة إلى تحميل برامج وتثبيتها، أو خبرة
+                            بإدارة العيادات لاستخدام نظامنا</p>
+                        <a href="#" class="btn btn-trynow ">جرّب هذا الآن</a>
+                    </div>
+                </div>
+                <div class="plus1">
+                    <img src="images/plus.png" alt="">
+                </div>
+                <div class="plus2">
+                    <img src="images/plus.png" width="20" alt="">
+                </div>
+                <div class="plus3">
+                    <img src="images/plus.png" width="36" alt="">
+                </div>
+                <div class="plus4">
+                    <img src="images/plus.png" width="70" alt="">
+                </div>
+                <div class="plus5">
+                    <img src="images/plus.png" width="26" alt="">
+                </div>
+                <div class="plus6">
+                    <img src="images/plus.png" width="16" alt="">
+                </div>
+
+            </div>
+        </section>
+        <!-- end with-muser  -->
 
 
     </main>
