--- a/about_us.html
+++ b/about_us.html
@@ -651,7 +651,6 @@
 
                             </div>
                         </a>
-                        <h2>حول ميسّر مقدمي الخدمات وما يميزنا </h2>
                         <p> تأسست منصة "ميسِّر" للخدمات الطبية عام 2022، وهي أول منصة تستهدف الترويج للطبيب وعرض خدماته
                             الطبية، بالإضافة إلى تزويده بنظام متكامل لإدارة عيادته وتنظيم مهامه، ما يساعده على النمو
                             سريعًا في فترة وجيزة.
@@ -740,10 +739,10 @@
                         <h2>لماذا تعد منصة "ميسِّر" للخدمات الطبية شريكاً مثالياً للطبيب؟</h2>
                         <p>تقدم لك منصة ميسِّر العديد من الخدمات الحصرية مقابل أسعار تنافسية، وفي بيئة مؤمّنة تحمي
                             خصوصيتك بفضل خوادمنا المشفرة، كذلك توفّر لك دعماً فنياً مجانيّاً طوال الأسبوع، وتحفظ لك
-                            حقوقك وفق عقد مسجل.
+                            حقوقك وفق عقد مسجل. <br> هل ترغب في ترك تعليق أو استفسار؟ يسعدنا تواصلك معنا
 
                         </p>
-                        <a href="contact.html" class="join-us-btn btn mt-2"> اتصل بنا </a>
+                        <a href="contact.html" class="join-us-btn btn "> اتصل بنا </a>
                     </div>
 
                 </div>
